--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,10 @@
     "minimum-stability": "dev",
     "require": {
         "vicgarcia/slimproject": "dev-master"
+    },
+    "autoload": {
+        "psr-0": {
+            "dChallenge": "source/"
+        }
     }
 }
