use config in array

--- a/configure/pdo.php.sample
+++ b/configure/pdo.php.sample
@@ -1,8 +1,7 @@
 <?php
 
-$config = new \stdClass;
-$config->dest = '';
-$config->user = '';
-$config->pass = '';
-
-return $config;
+return array(
+    'dest' => '',
+    'user' => '',
+    'pass' => ''
+);
