add meekro dependency in composer

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "minimum-stability": "dev",
     "require": {
-        "vicgarcia/slimproject": "dev-master"
+        "vicgarcia/slimproject": "dev-master",
+        "sergeytsalkov/meekrodb": "dev-master"
     },
     "autoload": {
         "psr-0": {
