--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ log/
 workspace/
 vendor/
 composer.lock
-configure/mysql.php
-configure/redis.php
-configure/pdo.php
+config/mysql.php
+config/redis.php
+config/pdo.php
 *.csv
