sweeping approach to divvystat rename
- change filename stubs from dvmap to divvystat where relevant
- change namespace w/in codebase from dvMap to DivvyStat
- make filename changes needed for namespace change
- update namespace usage, defination in composer.json
- TODO : migrate database name? handle this somehow?

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     },
     "autoload": {
         "psr-0": {
-            "dvMap": "source/"
+            "DivvyStat": "source/"
         }
     }
 }
