added default configs in sample

--- a/config/mysql.php.sample
+++ b/config/mysql.php.sample
@@ -1,9 +1,9 @@
 <?php
 
 return array(
-    'host' => '',
-    'base' => '',
-    'user' => '',
-    'pass' => ''
+    'host' => 'localhost',
+    'base' => 'divvystat',
+    'user' => 'divvystat',
+    'pass' => 'divvystat'
 );
 
