--- a/config/redis.php.sample
+++ b/config/redis.php.sample
@@ -1,6 +1,8 @@
 <?php
 
 return array(
-    'host' => '127.0.0.1',
-    'port' => '6379'
+    'scheme'   => 'tcp',
+    'host'     => '127.0.0.1',
+    'port'     => '6379',
+    'database' => '0'
 );
