--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
   },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-sass": "~0.8.1"
   }
 }
