--- a/.gitignore
+++ b/.gitignore
@@ -14,21 +14,22 @@ config/mysql.php
 config/redis.php
 config/pdo.php
 
-# bower stuff
-public/js/libs
-bower_components
-
 # dev scripts (may contain credentials/config)
 update_dev_db
 
-# we're using npm and node
+# exclude toolchain stuff
 node_modules
-
-# don't track sass dependencies
-templates/lib
-
-# don't track compiled css from sass, cache files
+bower_components
 .sass-cache
+
+# don't track dev/uncompiled dependencies
+node_modules
+templates/js/lib/*
+templates/sass/lib/*
+
+# don't track compiled js/css
+public/main.js
 public/style.css.map
 public/style.css
-
+public/require.js
+public/src
