--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-requirejs": "^0.4.4",
-    "grunt-contrib-sass": "~0.8.1"
+    "grunt-contrib-sass": "~0.8.1",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
