--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
         "Leaflet.awesome-markers": "2.0.1",
         "leaflet.fullscreen": "1.1.3",
         "raphael": "2.1.2",
-        "morris": "0.5.1"
+        "morrisjs": "0.5.1"
     },
 
     "install" : {
