--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-sass": "~0.8.1",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-exec": "^0.4.6"
   }
 }
