update build toolchain
use sass css import for single stylesheet w/ dependencies
add poor mans bower/bourbon/neat lib install
copy icons from libs to public, add in .gitignore, w/ grunt build
clean stuff up

--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,8 @@
 
     "install" : {
         "path" : {
-            "png": "public/src",
-            "css": "public/src",
+            "png": "templates/sass/lib",
+            "css": "templates/sass/lib",
             "js": "templates/js/lib"
         },
         "sources": {
