--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
-## dvmap.chester250.com
+## divvystat.com
 server {
     listen 80;
-    server_name dvmap.chester250.com;
+    server_name divvystat.com;
     root /opt/dvMap/public;
 
     try_files $uri /index.php;
@@ -22,9 +22,9 @@ server {
 ## development at :8000
 server {
     listen 8000;
-    server_name dvmap.chester250.com;
+    server_name divvystat.com;
 
     location / {
-        proxy_pass  http://127.0.0.1:8003;
+        proxy_pass  http://127.0.0.1:8020;
     }
 }
