use password as a placeholder

--- a/config/mysql.php.sample
+++ b/config/mysql.php.sample
@@ -4,6 +4,6 @@ return array(
     'host' => 'localhost',
     'base' => 'divvystat',
     'user' => 'divvystat',
-    'pass' => 'divvystat'
+    'pass' => 'password'
 );
 
