fix nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
-## divvystat.com
+## divvystat.us
 server {
     listen 80;
-    server_name divvystat.com;
+    server_name divvystat.us;
     root /opt/dvMap/public;
 
     try_files $uri /index.php;
@@ -22,7 +22,7 @@ server {
 ## development at :8000
 server {
     listen 8000;
-    server_name divvystat.com;
+    server_name divvystat.us;
 
     location / {
         proxy_pass  http://127.0.0.1:8080;
