--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@
 server {
     listen 80;
     server_name divvystat.us;
-    root /opt/dvMap/public;
+    root /opt/divvystat/public;
 
     try_files $uri /index.php;
 
