update dependencies and use .lock file

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "vicgarcia/kaavii": "dev-dev",
         "sergeytsalkov/meekrodb": "2.2.1",
         "thepixeldeveloper/sitemap": "2.0.*",
+        "nategood/commando": "*",
         "nesbot/carbon": "~1.14"
     },
     "autoload": {
