--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ server {
 
     location /index.php {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_pass unix:/var/run/php5-fpm.sock;
+        fastcgi_pass unix:/run/php/php7.0-fpm.sock;
         include fastcgi_params;
     }
 
