add config for mailgun api

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ composer.phar
 # config files
 config/mysql.php
 config/redis.php
-config/pdo.php
+config/mailgun.php
 
 # dev scripts (may contain credentials/config)
 update_dev_db
