remove status check + email functionality

--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,7 @@
         "sergeytsalkov/meekrodb": "2.3.*",
         "thepixeldeveloper/sitemap": "2.0.*",
         "nategood/commando": "0.2.*",
-        "rmccue/requests": "1.6.*",
-        "mailgun/mailgun-php": "^2.3",
-        "php-http/curl-client": "^1.7",
-        "guzzlehttp/psr7": "^1.4"
+        "rmccue/requests": "1.6.*"
     },
     "autoload": {
         "psr-0": {
